# vimm-downloader

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  README.md
.github/workflows/: ci.yml  release.yml
.opencode/plans/: 2026-07-01-issue2-closeout.md
crates/vimm-bindings/: Cargo.toml
crates/vimm-bindings/src/: lib.rs
crates/vimm-cli/: Cargo.toml
crates/vimm-cli/src/: main.rs
crates/vimm-core/: Cargo.toml
crates/vimm-core/src/: archive.rs  client.rs  config.rs  detail.rs  download.rs  error.rs  lib.rs  model.rs  search.rs  systems.rs
crates/vimm-core/tests/: live_tests.rs  snapshot_tests.rs
crates/vimm-spike/: Cargo.toml
crates/vimm-spike/src/: list_7z.rs  main.rs
docs/superpowers/plans/: 2026-07-01-http-client.md  2026-07-14-documentation-reconciliation.md  2026-07-14-extraction-progress.md  2026-07-14-info-detail-parser.md  2026-07-14-release-artifacts.md  2026-07-14-safe-archive-cleanup.md
docs/superpowers/specs/: 2026-07-01-http-client-design.md  2026-07-14-documentation-reconciliation-design.md  2026-07-14-extraction-progress-design.md  2026-07-14-info-detail-parser-design.md  2026-07-14-release-artifacts-design.md  2026-07-14-safe-archive-cleanup-design.md
tests/fixtures/: armored_core_all.html  game_5625_current.html  game_7478_current.html  game_7818.html  game_834.html  nes_list.html  vault_home.html
tests/fixtures/expected/: detail_current_multi.json  detail_current_single.json  detail_multi.json  detail_single.json  search_all_system.json  search_per_system.json  systems.json
