[package]
name = "vimm-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Command-line frontend for the vimm-downloader"

[[bin]]
name = "vimm-downloader"
path = "src/main.rs"

[dependencies]
vimm-core = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
