[package]
name = "vimm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Portable core library for the Vimm's Lair Vault downloader"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
reqwest = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
scraper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
sevenz-rust2 = { workspace = true }
zip = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
wiremock = "0.6"
